Implemented signing with Mobile-ID; Implemented custom TabBar;

--- a/MoppApp/MoppApp/Container.storyboard
+++ b/MoppApp/MoppApp/Container.storyboard
@@ -52,28 +52,28 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G1c-6p-7Qw">
-                                                    <rect key="frame" x="0.0" y="9" width="375" height="27"/>
+                                                    <rect key="frame" x="0.0" y="8" width="375" height="28"/>
                                                 </button>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRq-vE-b6Z">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
-                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.34999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SRq-vE-b6Z" userLabel="---">
+                                                    <rect key="frame" x="0.0" y="43" width="375" height="1"/>
+                                                    <color key="backgroundColor" red="0.55339863578680204" green="0.55339863578680204" blue="0.55339863578680204" alpha="0.34999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="8Jb-aY-Sjq"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="SRq-vE-b6Z" firstAttribute="top" secondItem="G1c-6p-7Qw" secondAttribute="bottom" constant="7" id="2xY-pc-WNB"/>
                                                 <constraint firstAttribute="trailing" secondItem="8N8-Yg-ffA" secondAttribute="trailing" constant="16" id="A65-5b-9qX"/>
-                                                <constraint firstAttribute="bottom" secondItem="G1c-6p-7Qw" secondAttribute="bottom" constant="8" id="CyW-xG-EZU"/>
-                                                <constraint firstItem="SRq-vE-b6Z" firstAttribute="top" secondItem="ooU-66-Lg7" secondAttribute="top" id="JCg-Aa-OSP"/>
                                                 <constraint firstAttribute="trailing" secondItem="G1c-6p-7Qw" secondAttribute="trailing" id="Ltv-02-sUI"/>
                                                 <constraint firstItem="8N8-Yg-ffA" firstAttribute="top" secondItem="ooU-66-Lg7" secondAttribute="top" id="UfP-fQ-Q4x"/>
                                                 <constraint firstItem="SRq-vE-b6Z" firstAttribute="leading" secondItem="ooU-66-Lg7" secondAttribute="leading" id="aeP-ap-ZbW"/>
+                                                <constraint firstAttribute="bottom" secondItem="SRq-vE-b6Z" secondAttribute="bottom" id="blc-vK-D1V"/>
                                                 <constraint firstItem="8N8-Yg-ffA" firstAttribute="leading" secondItem="ooU-66-Lg7" secondAttribute="leading" constant="16" id="htc-04-qA7"/>
                                                 <constraint firstItem="G1c-6p-7Qw" firstAttribute="leading" secondItem="ooU-66-Lg7" secondAttribute="leading" id="iau-hy-U2w"/>
                                                 <constraint firstAttribute="trailing" secondItem="SRq-vE-b6Z" secondAttribute="trailing" id="ir2-Hj-4pU"/>
                                                 <constraint firstAttribute="bottom" secondItem="8N8-Yg-ffA" secondAttribute="bottom" id="kwx-7W-kbv"/>
-                                                <constraint firstItem="G1c-6p-7Qw" firstAttribute="top" secondItem="SRq-vE-b6Z" secondAttribute="bottom" constant="8" id="pgI-T6-1tk"/>
+                                                <constraint firstItem="G1c-6p-7Qw" firstAttribute="top" secondItem="ooU-66-Lg7" secondAttribute="top" constant="8" id="wIN-tN-kP0"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="1" green="0.9157181978225708" blue="0.74446463584899902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
