Fixed UI for container opening/creating flows

--- a/MoppApp/MoppApp/ContainerElements.xib
+++ b/MoppApp/MoppApp/ContainerElements.xib
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -40,6 +41,18 @@
                         <constraint firstAttribute="height" constant="1" id="SVd-xT-z1l"/>
                     </constraints>
                 </view>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTM-MC-Uo5">
+                    <rect key="frame" x="317" y="22.5" width="58" height="58"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="58" id="4K6-QW-U3T"/>
+                        <constraint firstAttribute="width" secondItem="BTM-MC-Uo5" secondAttribute="height" multiplier="1:1" id="Ew6-ud-xja"/>
+                    </constraints>
+                    <color key="tintColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <state key="normal" image="addIcon"/>
+                    <connections>
+                        <action selector="addAction" destination="iN0-l3-epB" eventType="touchUpInside" id="YFP-Xg-3fI"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
@@ -51,15 +64,21 @@
                 <constraint firstItem="xKk-QQ-QG2" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="V9n-Wv-K5T"/>
                 <constraint firstItem="Th8-Lk-whe" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="X92-RB-WvW"/>
                 <constraint firstItem="Th8-Lk-whe" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="Zzv-iD-ddb"/>
+                <constraint firstItem="BTM-MC-Uo5" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="g1D-40-unL"/>
+                <constraint firstItem="BTM-MC-Uo5" firstAttribute="centerY" secondItem="Th8-Lk-whe" secondAttribute="centerY" id="ocx-XC-tc0"/>
                 <constraint firstAttribute="bottom" secondItem="xKk-QQ-QG2" secondAttribute="bottom" id="qy1-VA-ZMN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Th8-Lk-whe" secondAttribute="trailing" constant="16" id="xlL-qu-zya"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="addButton" destination="BTM-MC-Uo5" id="5Lm-g1-2mM"/>
                 <outlet property="titleLabel" destination="Th8-Lk-whe" id="JKO-vN-rZf"/>
             </connections>
             <point key="canvasLocation" x="-22.5" y="-250"/>
         </view>
     </objects>
+    <resources>
+        <image name="addIcon" width="25" height="25"/>
+    </resources>
 </document>
