--- a/MoppApp/MoppApp/Landing.storyboard
+++ b/MoppApp/MoppApp/Landing.storyboard
@@ -333,37 +333,47 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n0c-Dn-QQK">
-                                <rect key="frame" x="78" y="281.5" width="219" height="104"/>
+                                <rect key="frame" x="57.5" y="257.5" width="260" height="152.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Allkirjasta Mobiil-ID äpiga" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebk-VA-thg">
-                                        <rect key="frame" x="16" y="16" width="187" height="19"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Allkirjasta Mobiil-ID äpiga" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebk-VA-thg">
+                                        <rect key="frame" x="16" y="16" width="228" height="19"/>
                                         <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                         <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="VKH-8c-7RZ" userLabel="MobileID Session Counter">
-                                        <rect key="frame" x="15.5" y="51" width="187.5" height="2"/>
+                                        <rect key="frame" x="15.5" y="51" width="228.5" height="2"/>
                                         <color key="tintColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </progressView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kood:1234" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kn9-yO-Va6">
-                                        <rect key="frame" x="15.5" y="69" width="187.5" height="19"/>
+                                        <rect key="frame" x="15.5" y="77" width="228.5" height="19"/>
                                         <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
-                                        <color key="textColor" red="0.21176470588235294" green="0.21568627450980393" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="textColor" red="0.0" green="0.43137254899999999" blue="0.70980392160000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Make sure the control code above matches and enter Mobile-ID PIN2 code" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="20" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gne-Hx-5cH">
+                                        <rect key="frame" x="16" y="120" width="228" height="16.5"/>
+                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
+                                        <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="VKH-8c-7RZ" firstAttribute="top" secondItem="ebk-VA-thg" secondAttribute="bottom" constant="16" id="6b6-zj-nS8"/>
+                                    <constraint firstItem="Gne-Hx-5cH" firstAttribute="leading" secondItem="n0c-Dn-QQK" secondAttribute="leading" constant="16" id="8o7-Wp-nYT"/>
                                     <constraint firstItem="ebk-VA-thg" firstAttribute="leading" secondItem="n0c-Dn-QQK" secondAttribute="leading" constant="16" id="9Y6-Zj-Okp"/>
                                     <constraint firstAttribute="trailing" secondItem="kn9-yO-Va6" secondAttribute="trailing" constant="16" id="IpI-3z-tUX"/>
                                     <constraint firstItem="kn9-yO-Va6" firstAttribute="leading" secondItem="n0c-Dn-QQK" secondAttribute="leading" constant="16" id="MiW-w9-W40"/>
-                                    <constraint firstItem="kn9-yO-Va6" firstAttribute="top" secondItem="VKH-8c-7RZ" secondAttribute="bottom" constant="16" id="OUR-rc-yo8"/>
-                                    <constraint firstAttribute="bottom" secondItem="kn9-yO-Va6" secondAttribute="bottom" constant="16" id="Owo-gQ-adk"/>
+                                    <constraint firstItem="kn9-yO-Va6" firstAttribute="top" secondItem="VKH-8c-7RZ" secondAttribute="bottom" constant="24" id="OUR-rc-yo8"/>
                                     <constraint firstAttribute="trailing" secondItem="ebk-VA-thg" secondAttribute="trailing" constant="16" id="Pgp-PA-gYl"/>
+                                    <constraint firstAttribute="trailing" secondItem="Gne-Hx-5cH" secondAttribute="trailing" constant="16" id="T9Y-h8-SEY"/>
                                     <constraint firstAttribute="trailing" secondItem="VKH-8c-7RZ" secondAttribute="trailing" constant="16" id="TtL-sp-eQc"/>
+                                    <constraint firstItem="Gne-Hx-5cH" firstAttribute="top" secondItem="kn9-yO-Va6" secondAttribute="bottom" constant="24" id="aXQ-H8-TuY"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="260" id="h2u-gK-i40"/>
                                     <constraint firstItem="VKH-8c-7RZ" firstAttribute="leading" secondItem="n0c-Dn-QQK" secondAttribute="leading" constant="16" id="kLL-Fj-LM9"/>
                                     <constraint firstItem="ebk-VA-thg" firstAttribute="top" secondItem="n0c-Dn-QQK" secondAttribute="top" constant="16" id="kfj-lu-ebO"/>
+                                    <constraint firstAttribute="bottom" secondItem="Gne-Hx-5cH" secondAttribute="bottom" constant="16" id="nqB-Qs-Zwe"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -380,6 +390,7 @@
                     </view>
                     <connections>
                         <outlet property="codeLabel" destination="kn9-yO-Va6" id="F44-Pt-e6L"/>
+                        <outlet property="helpLabel" destination="Gne-Hx-5cH" id="Xf8-AO-Nrx"/>
                         <outlet property="timeoutProgressView" destination="VKH-8c-7RZ" id="GEf-dU-ojn"/>
                         <outlet property="titleLabel" destination="ebk-VA-thg" id="qMs-VG-1FR"/>
                     </connections>
